force-app/main/default/objects/Project__c/fields/Project_Progress__c.field-meta.xml
<CustomField>
    <fullName>Project_Progress__c</fullName>
    <formula>(Tasks_Completed__c / Total_Tasks__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Progress</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>