force-app/main/default/objects/Project__c/fields/Tasks_Completed__c.field-meta.xml
<CustomField>
    <fullName>Tasks_Completed__c</fullName>
    <label>Tasks Completed</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>