force-app/main/default/objects/Project__c/fields/Total_Hour__c.field-meta.xml
<CustomField>
    <fullName>Total_Hour__c</fullName>
    <label>Total Hour</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>