force-app/main/default/objects/Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project_Manager__c</columns>
    <columns>Project_Progress__c</columns>
    <columns>Total_Tasks__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>